@startuml

title __NORMAL_WEIGHT's Class Diagram__\n

  namespace com.example.normal_weight {
    class com.example.normal_weight.MainActivity {
        - btnCalculate : Button
        - editHeight : EditText
        - editWeight : EditText
        - radioSex : RadioGroup
        # onCreate()
    }
  }
  

  namespace com.example.normal_weight {
    class com.example.normal_weight.Result {
        - btnReturn : Button
        - image : ImageView
        - textSex : TextView
        - textSuggestion : TextView
        - textWeight : TextView
        # onCreate()
    }
  }
  

  com.example.normal_weight.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.normal_weight.Result -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
